--- a/scss/variables.scss
+++ b/scss/variables.scss
@@ -51,6 +51,7 @@ $progress-bar-height:7px;
 
 $activity-icon-height:28px;
 $activity-icon-width:28px;
+$summary-max-height:300px;
 
 .p-24{
     padding: 24px;
